creating UI unit test for switching a users tenancy

--- a/source/java/admin-webapp/src/scripts/tenants/create/createTenant.html
+++ b/source/java/admin-webapp/src/scripts/tenants/create/createTenant.html
@@ -6,7 +6,7 @@
 
     <div class="settings-body">
         <div class="form-group" style="width: 260px;">
-            <fui-input type="text" class="form-control" size="32" placeholder="Tenant Name" ng-model="name">
+            <fui-input type="text" class="form-control tenant-name-input" size="32" placeholder="Tenant Name" ng-model="name">
         </div>
     </div>
 
