--- a/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/waterfallslider.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/waterfallslider.html
@@ -16,7 +16,7 @@
                     <div class="flex">
                         <spinner class="skinny" value="spinnerValue" min="spinnerMin" max="spinnerMax" step="spinnerStep" show-buttons="false"></spinner>
                         <div style="width: 4px"></div>
-                        <fui-dropdown skinny="true" items="choices" name-property="selectName" selected="slider.realRange" background-color="white" color="black" border="black"></fui-dropdown>
+                        <fui-dropdown skinny="true" items="choices" name-property="selectName" selected="dropdownRange" background-color="white" color="black" border="black"></fui-dropdown>
                         <div style="width: 4px"></div>
                         <button class="btn btn-primary skinny" ng-click="setSliderValue( slider );">Set</button>
                     </div>
