--- a/source/java/admin-webapp/src/scripts/volumes/volumeContainer.html
+++ b/source/java/admin-webapp/src/scripts/volumes/volumeContainer.html
@@ -1,6 +1,6 @@
 <div ng-controller="volumeContainerController">
     
-    <waterfall-slider sliders="sliders" range="range"></waterfall-slider>
+    <waterfall-slider sliders="sliders" range="volumeVars.range"></waterfall-slider>
     
     <slide-window-stack global-vars="volumeVars">
         <slide-window-slide name="listvolumes" breadcrumb-name="View Volumes">
