--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -110,6 +110,7 @@
     <script type="text/javascript" src="scripts/directives/fds-components/qos/qos.js"></script>
     <script type="text/javascript" src="scripts/directives/fds-components/data-connector/data-connector.js"></script>
     <script type="text/javascript" src="scripts/directives/fds-components/snapshot-policies/snapshot-policy.js"></script>
+    <script type="text/javascript" src="scripts/directives/fds-components/snapshot-policies/protection-policy.js"></script>    
 </head>
 
 <body class="menu-active">
