--- a/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/waterfallslider.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/waterfallslider.html
@@ -1,4 +1,6 @@
 <div class="waterfall-slider" ng-dragstart="$event.preventDefault()">
+    
+    <div class="waterfall-shade" ng-show="enabled === false"></div>
     <div class="labels">
         <div class="slider-name" ng-repeat="slider in sliders">{{slider.name}}</div>
     </div>
@@ -6,9 +8,9 @@
         <div class="slider" ng-repeat="slider in sliders">
             <div class="bar" ng-click="sliderMoved( $event, slider )"></div>
             <div class="fill-bar" ng-style="{ left: slider.startPosition, width: slider.position - slider.startPosition }" ng-class="{'solid-fill': $index === 0}"></div>
-            <div class="value-container" ng-style="{ left: (editing !== $index ) ? slider.position + 'px' : (slider.position - 5) + 'px' }" ng-show="$index === 0 || sliders[$index-1].position !== slider.position" ng-class="{ 'std-transition' : showAnimation === true, 'edit-box': editing === $index, 'stay-in-screen': amITooWide( $index ) }">
+            <div class="value-container" ng-style="{ left: (editing !== $index ) ? slider.position + 'px' : (slider.position - 5) + 'px' }" ng-class="{ 'std-transition' : showAnimation === true, 'edit-box': editing === $index, 'stay-in-screen': amITooWide( $index ) }">
                 <div class="value-display flex" ng-mouseenter="hover = $index;" ng-mouseleave="hover = -1" ng-show="editing !== $index">
-                    <div>{{ createLabel( slider.value ) }}</div>
+                    <div ng-show="$index === 0 || sliders[$index-1].position !== slider.position">{{ createLabel( slider.value ) }}</div>
                     <span class="icon icon-admin" ng-show="hover === $index" ng-click="sliderEdit( $index )"></span>
                 </div>
                 <div class="value-display edit-box" ng-show="editing === $index">
@@ -24,7 +26,7 @@
             </div>
             <div style="position: absolute;" ng-style="{ left: slider.position + 'px' }">
                 <div class="border-triangle" ng-show="editing === $index"></div>
-                <div class="triangle" ng-class="{ 'edit-box' : editing === $index }"></div>
+                <div class="triangle" ng-class="{ 'edit-box' : editing === $index }" ng-show="$index === 0 || sliders[$index-1].position !== slider.position"></div>
             </div>
             
             <div class="handle" ng-dragstart="$event.preventDefault()" ng-style="{ left: sliders[$index-1].position + 'px' }" ng-show="$index !== 0"></div>
