--- a/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
@@ -28,10 +28,10 @@
             <connector-panel ng-model="dataConnector"></connector-panel>
         </section>
         <section>
-            <qos-panel ng-model="qos"></qos-panel>
+            <qos-panel ng-model="qos" save-only="true"></qos-panel>
         </section>
         <section>
-            <protection-policy-panel ng-model="protectionPolicies"></protection-policy-panel>
+            <protection-policy-panel ng-model="protectionPolicies" save-only="true"></protection-policy-panel>
         </section>
 <!--
         <section>
