--- a/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
@@ -9,6 +9,10 @@
     <waterfall-slider sliders="sliders" range="range" enabled="editing"></waterfall-slider>
     
     <div class="protection-button-panel" ng-show="editing === true">
-        <button class="btn btn-primary" ng-click="save()" translate>common.l_done</button>
+        <button class="btn btn-primary skinny" ng-click="save()" translate>
+            <span ng-show="saveOnly === 'true' || saveOnly === true">common.l_done</span>
+            <span ng-show="saveOnly === 'false' || saveOnly === false">common.l_save</span>
+        </button>
+        <button class="btn btn-secondary skinny" ng-click="cancel()" ng-show="saveOnly === 'false' || saveOnly === false" translate>common.l_cancel</button>
     </div>
 </div>
