--- a/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
@@ -32,10 +32,10 @@
     </div>
     
     <div class="protection-button-panel" ng-show="editing === true">
-        <button class="btn btn-primary skinny" ng-click="save()">
+        <button class="btn btn-primary skinny save-timeline" ng-click="save()">
             <span ng-show="saveOnly === 'true' || saveOnly === true" translate>common.l_done</span>
             <span ng-show="saveOnly === 'false' || saveOnly === false" translate>common.l_save</span>
         </button>
-        <button class="btn btn-secondary skinny" ng-click="cancel()" ng-show="saveOnly === 'false' || saveOnly === false" translate>common.l_cancel</button>
+        <button class="btn btn-secondary skinny cancel-timeline" ng-click="cancel()" ng-show="saveOnly === 'false' || saveOnly === false" translate>common.l_cancel</button>
     </div>
 </div>
