--- a/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/waterfallslider.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/waterfallslider.html
@@ -11,8 +11,8 @@
                 <div class="bar" ng-click="sliderMoved( $event, slider )"></div>
                 <div class="fill-bar" ng-style="{ left: slider.startPosition, width: slider.position - slider.startPosition }" ng-class="{'solid-fill': $index === 0}"></div>
                 <div class="value-container" ng-style="{ left: (editing !== $index ) ? slider.position + 'px' : (slider.position - 5) + 'px' }" ng-class="{ 'std-transition' : showAnimation === true, 'edit-box': editing === $index, 'stay-in-screen': amITooWide( $index ) }">
-                    <div class="value-display flex" ng-mouseenter="hover = $index;" ng-mouseleave="hover = -1" ng-show="editing !== $index">
-                        <div ng-show="$index === 0 || sliders[$index-1].position !== slider.position">{{ createLabel( slider.value ) }}</div>
+                    <div class="value-display flex display-only" ng-mouseenter="hover = $index;" ng-mouseleave="hover = -1" ng-show="editing !== $index">
+                        <div class="value-label" ng-show="$index === 0 || sliders[$index-1].position !== slider.position">{{ createLabel( slider.value ) }}</div>
                         <span class="icon icon-admin" ng-show="hover === $index" ng-click="sliderEdit( $index )"></span>
                     </div>
                     <div class="value-display edit-box" ng-show="editing === $index">
@@ -22,7 +22,7 @@
                             <div style="width: 4px"></div>
                             <fui-dropdown skinny="true" items="choices" name-property="selectName" selected="dropdownRange" background-color="white" color="black" border="black"></fui-dropdown>
                             <div style="width: 4px"></div>
-                            <button class="btn btn-primary skinny" ng-click="setSliderValue( slider );">Set</button>
+                            <button class="btn btn-primary skinny set-value-button" ng-click="setSliderValue( slider );">Set</button>
                         </div>
                     </div>
                 </div>
