getting the test to wokrk by fixing manually entry bugs

--- a/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
@@ -15,7 +15,7 @@
     <div class="flex" style="margin-bottom: 12px;">
         <div class="time-selector-padding fine-print">
             <span translate>volumes.snapshot.l_daily</span>
-            <fui-dropdown skinny="true" items="times" name-property="displayName" selected="hourChoice" background-color="white" color="black" border="black" enabled="editing"></fui-dropdown>
+            <fui-dropdown class="hour-choice" skinny="true" items="times" name-property="displayName" selected="hourChoice" background-color="white" color="black" border="black" enabled="editing"></fui-dropdown>
         </div>
         <div class="time-selector-padding fine-print">
             <span translate>volumes.snapshot.l_weekly</span>
