more test cases

--- a/source/java/admin-webapp/src/scripts/directives/fds-components/qos/qos.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/qos/qos.html
@@ -60,7 +60,7 @@
             <span ng-show="saveOnly === 'true' || saveOnly === true" translate>common.l_done</span>
             <span ng-show="saveOnly === 'false' || saveOnly === false" translate>common.l_save</span>
         </button>
-        <button class="btn btn-secondary skinny save-qos-settings" translate ng-show="saveOnly === 'false' || saveOnly === false" ng-click="cancel()">
+        <button class="btn btn-secondary skinny cancel-qos-settings" translate ng-show="saveOnly === 'false' || saveOnly === false" ng-click="cancel()">
             common.l_cancel
         </button>
         
