--- a/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
@@ -19,15 +19,15 @@
         </div>
         <div class="time-selector-padding fine-print">
             <span translate>volumes.snapshot.l_weekly</span>
-            <fui-dropdown skinny="true" items="days" name-property="displayName" selected="dayChoice" background-color="white" color="black" border="black" enabled="editing"></fui-dropdown>
+            <fui-dropdown class="day-choice" skinny="true" items="days" name-property="displayName" selected="dayChoice" background-color="white" color="black" border="black" enabled="editing"></fui-dropdown>
         </div>
         <div class="time-selector-padding fine-print">
             <span translate>volumes.snapshot.l_monthly</span>
-            <fui-dropdown skinny="true" items="months" name-property="displayName" selected="monthChoice" background-color="white" color="black" border="black" enabled="editing"></fui-dropdown>
+            <fui-dropdown class="month-choice" skinny="true" items="months" name-property="displayName" selected="monthChoice" background-color="white" color="black" border="black" enabled="editing"></fui-dropdown>
         </div>
         <div class="time-selector-padding fine-print">
             <span translate>volumes.snapshot.l_yearly</span>
-            <fui-dropdown skinny="true" items="years" name-property="displayName" selected="yearChoice" background-color="white" color="black" border="black" enabled="editing"></fui-dropdown>
+            <fui-dropdown class="year-choice" skinny="true" items="years" name-property="displayName" selected="yearChoice" background-color="white" color="black" border="black" enabled="editing"></fui-dropdown>
         </div>
     </div>
     
