--- a/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
@@ -41,7 +41,7 @@
 
     </div>
 
-    <div style="margin-top: 24px;margin-bottom: 42px;">
+    <div class="create-volume-button-panel" style="margin-top: 24px;margin-bottom: 42px;">
         <button class="btn btn-primary" style="display: inline-block;" ng-click="save()">
             <span ng-show="volumeVars.creating === true" translate>volumes.l_create_volume</span>
         </button>
