--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -92,6 +92,7 @@
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-input/fui-input.js"></script>
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-slider/fui-slider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/slider/slider.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/buttonbar/buttonbar.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/treegrid/treegrid.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/pager/pager.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/macbrowser/macbrowser.js"></script>
@@ -111,6 +112,7 @@
     <script type="text/javascript" src="scripts/directives/fds-components/data-connector/data-connector.js"></script>
     <script type="text/javascript" src="scripts/directives/fds-components/snapshot-policies/snapshot-policy.js"></script>
     <script type="text/javascript" src="scripts/directives/fds-components/snapshot-policies/protection-policy.js"></script>    
+    <script type="text/javascript" src="scripts/directives/fds-components/tiering/tiering.js"></script>
 </head>
 
 <body class="menu-active">
