--- a/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
@@ -28,13 +28,13 @@
             <connector-panel ng-model="dataConnector"></connector-panel>
         </section>
         <section>
+            <tiering-panel ng-model="mediaPolicy"></tiering-policy-panel>
+        </section>        
+        <section>
             <qos-panel ng-model="qos" save-only="true"></qos-panel>
         </section>
         <section>
             <protection-policy-panel ng-model="protectionPolicies" save-only="true"></protection-policy-panel>
-        </section>
-        <section>
-            <tiering-panel ng-model="tieringPolicy"></tiering-policy-panel>
         </section>
 <!--
         <section>
