--- a/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
@@ -5,8 +5,8 @@
             <span class="icon icon-edit"></span>
         </div>
     </div>
-    
-    <waterfall-slider sliders="sliders" range="range" enabled="editing"></waterfall-slider>
+
+    <waterfall-slider style="width: 1000px;" sliders="sliders" range="range" enabled="editing"></waterfall-slider>
     
     <div class="header">
         <span translate>volumes.snapshot.l_time_of_retained_snapshots</span>
