--- a/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/waterfallslider.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/waterfallslider/waterfallslider.html
@@ -31,8 +31,8 @@
                     <div class="triangle" ng-class="{ 'edit-box' : editing === $index }" ng-show="$index === 0 || sliders[$index-1].position !== slider.position"></div>
                 </div>
 
-                <div class="handle" ng-dragstart="$event.preventDefault()" ng-style="{ left: sliders[$index-1].position + 'px' }" ng-show="$index !== 0"></div>
-                <div class="handle" ng-dragstart="$event.preventDefault()" ng-style="{ left: slider.position + 'px' }" ng-mousedown="handleClicked( slider, $index )" ng-class="{ 'std-transition' : showAnimation === true, 'grabbed' : grabbedSlider === slider }"></div>
+                <div class="handle starting-handle" ng-dragstart="$event.preventDefault()" ng-style="{ left: sliders[$index-1].position + 'px' }" ng-show="$index !== 0"></div>
+                <div class="handle ending-handle" ng-dragstart="$event.preventDefault()" ng-style="{ left: slider.position + 'px' }" ng-mousedown="handleClicked( slider, $index )" ng-class="{ 'std-transition' : showAnimation === true, 'grabbed' : grabbedSlider === slider }"></div>
                 <div class="trackline" ng-style="{left: (slider.position+5) + 'px', height: (38*(sliders.length-$index-1) - 5) + 'px'}" ng-class="{ 'std-transition' : showAnimation === true }">
                 </div>
             </div>
