changes from PR comments

--- a/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/protection-policy.html
@@ -6,7 +6,7 @@
         </div>
     </div>
 
-    <waterfall-slider style="width: 1000px;" sliders="sliders" range="range" enabled="editing"></waterfall-slider>
+    <waterfall-slider sliders="sliders" range="range" enabled="editing"></waterfall-slider>
     
     <div class="header">
         <span translate>volumes.snapshot.l_time_of_retained_snapshots</span>
