removing the snapshot table and renaming the protection files to timeline

--- a/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
@@ -36,7 +36,7 @@
             <qos-panel ng-model="qos" save-only="true"></qos-panel>
         </section>
         <section>
-            <protection-policy-panel ng-model="protectionPolicies" save-only="true"></protection-policy-panel>
+            <timeline-policy-panel ng-model="timelinePolicies" save-only="true"></timeline-policy-panel>
         </section>
 <!--
         <section>
