--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -92,6 +92,7 @@
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-input/fui-input.js"></script>
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-slider/fui-slider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/slider/slider.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/timeslider/timeslider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/buttonbar/buttonbar.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/treegrid/treegrid.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/pager/pager.js"></script>
