date and time picker widgets for the snapshot clone thing

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -93,6 +93,8 @@
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-slider/fui-slider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/slider/slider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/timeslider/timeslider.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/timespinner/timespinner.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/datepicker/datepicker.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/buttonbar/buttonbar.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/treegrid/treegrid.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/pager/pager.js"></script>
