--- a/source/java/admin-webapp/src/scripts/directives/widgets/timeslider/timeslider.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/timeslider/timeslider.html
@@ -1,13 +1,16 @@
 <div class="time-slider" ng-dragstart="$event.preventDefault()">
-    <div style="height: 64px;"></div>
+    <div style="height: 68px;"></div>
     <div class="slider-parent">
         <div class="bar" ng-click="sliderMoved( $event )"></div>
         <div class="select-range" ng-repeat="range in validRanges" ng-style="{ width: range.width, left: range.startPosition }"></div>
-        <div class="value-container" ng-style="{ left: placeMe() }">
+        <div class="value-container" ng-style="{ left: placeMe(), top: (editing === true)? '-158px' : '-68px' }">
 
-            <div class="value-display edit-box" ng-show="editing === $index">
-                <div>{{ label }}</div>
-                <input ng-model="filteredValue">
+            <div class="value-display edit-box">
+                <div>
+                    <div>{{ label }}</div>
+<!--                    <span class="form-control" >{{filteredValue}}</span>-->
+                    <time-spinner ng-model="selectedValue" show-date="true"></time-spinner>
+                </div>
             </div>
         </div>
         <div class="arrow-parent" ng-style="{ left: (sliderPosition + 2) + 'px' }">
