adding a date time typer and an apply feature to eliminate jumping boxes

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -95,6 +95,7 @@
     <script type="text/javascript" src="scripts/directives/widgets/timeslider/timeslider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/timespinner/timespinner.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/datepicker/datepicker.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/datetimetyper/datetimetyper.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/buttonbar/buttonbar.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/treegrid/treegrid.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/pager/pager.js"></script>
