--- a/source/java/admin-webapp/src/scripts/directives/widgets/timeslider/timeslider.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/timeslider/timeslider.html
@@ -9,7 +9,8 @@
                 <div>
                     <div>{{ label }}</div>
 <!--                    <span class="form-control" >{{filteredValue}}</span>-->
-                    <time-spinner ng-model="selectedValue" show-date="true"></time-spinner>
+                    <date-time-typer ng-model="selectedValue" mode="12"></date-time-typer>
+<!--                    <time-spinner ng-model="selectedValue" show-date="true"></time-spinner>-->
                 </div>
             </div>
         </div>
