--- a/source/java/admin-webapp/src/scripts/status/status.html
+++ b/source/java/admin-webapp/src/scripts/status/status.html
@@ -42,7 +42,7 @@
             <div class="tile-parent">
 <!--                <div class="performance-tile tile"></div>-->
                 <status-tile tile-title="{{ 'status.l_performance' | translate }}" calculated-data="performanceItems">
-                    <line-chart data="performanceStats" colors="performanceColors" line-colors="performanceLine" suffix="IOPs" axis-color="#A0A0A0" domain-labels="performanceLabels" background-color="#f7f7f7"></line-chart>
+                    <stacked-line-chart data="performanceBreakdownStats" colors="performanceColors" line-colors="performanceLine" suffix="IOPs" axis-color="#A0A0A0" domain-labels="performanceLabels" background-color="#f7f7f7"></stacked-line-chart>
                 </status-tile>
             </div>
             <div class="tile-parent">
