volume page styling and fixing repercautions

--- a/source/java/admin-webapp/src/scripts/admin/admin.html
+++ b/source/java/admin-webapp/src/scripts/admin/admin.html
@@ -37,9 +37,9 @@
         <div class="volume-data-type-panel open">
             <table class="default volumes">
                 <thead>
-                    <th translate>admin.th_data_type</th>
-                    <th translate>admin.th_api</th>
-                    <th translate>admin.th_default_capacity</th>
+                    <th><div translate>admin.th_data_type</div></th>
+                    <th><div translate>admin.th_api</div></th>
+                    <th><div translate>admin.th_default_capacity</div></th>
                     <th></th>
                 </thead>
                 <tbody id="data-connectors">
