--- a/source/java/admin-webapp/src/scripts/directives/fds-components/data-connector/data-connector.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/data-connector/data-connector.html
@@ -1,7 +1,7 @@
 <div class="name-type" style="width: 350px;">
 
     <section>
-        <div class="header">
+        <div class="sub-header light-underline">
             <span class="light-print" translate>volumes.l_data_connector</span>
             <div class="pull-right" ng-show="editing !== true && editable !== 'false'">
                 <span class="icon icon-edit edit-data-connector-button" ng-click="startEditing()"></span>
