--- a/source/java/admin-webapp/src/scripts/directives/fds-components/qos/qos.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/qos/qos.html
@@ -1,7 +1,7 @@
-<div class="qos-panel" ng-style="{ width: (editing === true )? '400px' : '290px' }">
+<div class="qos-panel" ng-style="{ width: (editing === true )? '400px' : '350px' }">
        
-    <div class="header">
-        <span translate>volumes.l_qos</span>
+    <div class="sub-header light-underline">
+        <span class="light-print" translate>volumes.l_qos</span>
         <div class="pull-right" ng-click="editing = true" ng-show="editing == false">
             <span class="icon icon-edit"></span>
         </div>
@@ -11,7 +11,7 @@
         <thead>
             <tr>
                 <th class="no-top-padding" colspan="2" translate>
-                    volumes.l_settings
+<!--                    volumes.l_settings-->
                 </th>
             </tr>
         </thead>
