--- a/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/timeline-policy.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/timeline-policy.html
@@ -1,5 +1,5 @@
 <div class="protection-policy">
-    <div class="header bottom-border">
+    <div class="sub-header light-underline">
         <span translate>volumes.l_timeline</span>
         <div class="pull-right" ng-click="editing = true" ng-show="editing == false">
             <span class="icon icon-edit"></span>
@@ -8,7 +8,7 @@
 
     <waterfall-slider sliders="sliders" range="range" enabled="editing"></waterfall-slider>
     
-    <div class="header">
+    <div class="sub-header">
         <span translate>volumes.snapshot.l_time_of_retained_snapshots</span>
     </div>
     
