--- a/source/java/admin-webapp/src/scripts/status/status.html
+++ b/source/java/admin-webapp/src/scripts/status/status.html
@@ -59,7 +59,7 @@
     <div class="page-vertical-spacer"></div>
 
     <div class="header top-label">
-        <span class="header" style="margin-bottom: 12px;" translate>status.activity</span>
+        <span class="sub-header" style="margin-bottom: 12px;" translate>status.activity</span>
 
         <table class="default">
             <tbody>
