--- a/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/snapshot-policy.html
+++ b/source/java/admin-webapp/src/scripts/directives/fds-components/snapshot-policies/snapshot-policy.html
@@ -1,6 +1,6 @@
 <div ng-style="{ width : (editing === true ) ? '880px' : '650px' }">
     
-    <div class="header">
+    <div class="sub-header light-underline">
         <span translate>volumes.l_snapshot_policy</span>
         <div class="pull-right" ng-click="editing = true" ng-show="editing == false">
             <span class="icon icon-edit edit-snapshot-policies"></span>
