--- a/source/java/admin-webapp/src/scripts/users/users.html
+++ b/source/java/admin-webapp/src/scripts/users/users.html
@@ -1,35 +1,18 @@
 <div ng-controller="userController" style="width: 100%;left: 0;top:0;">
 
-    <div class="header top-label">
+    <div class="">
 
         <div>
-            <span translate>users.title</span>
-            <a ng-click="createNewUser()" class="add-user-link pull-right" translate>users.l_create_user</a>
+            <span class="header pull-left" style="margin-right: 24px;" translate>users.title</span>
+            <fui-input style="width: 350px;" class="form-control pull-left" placeholder="{{ 'common.l_search' | translate }}" icon-class="fui-search" ng-model="userQuery"></fui-input>
+            <a ng-click="createNewUser()" class="add-user-link pull-right btn btn-primary" translate>users.l_create_user</a>
         </div>
-
-        <div style="position: relative;width: 100%;padding-top: 12px;" class="clearfix">
-            <div class="pull-left" style="width: 300px;">
-                <input type="text" class="form-control skinny" placeholder="Search Users" ng-model="userQuery"/>
-            </div>
-        </div>
-
-<!--
-        <div style="display: flex;padding-top: 12px;">
-            <div style="padding-right: 8px;">
-                <fui-dropdown skinny="true" type="action" items="actionItems" default-label="actionLabel" callback="actionSelected" background="none" color="black" border="gray"></fui-dropdown>
-            </div>
-            <div style="font-size: 0.6em;">
-                <div>for 0</div>
-                <div>selected users</div>
-            </div>
-        </div>
--->
 
         <table class="default">
             <thead>
 <!--                <th><input type="checkbox" /></th>-->
-                <th translate>common.th_name</th>
-                <th translate>users.th_tenant</th>
+                <th><div translate>common.th_name</div></th>
+                <th><div translate>users.th_tenant</div></th>
                 <th></th>
             </thead>
             <tboday>
