adding sorting and searching

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -108,6 +108,7 @@
     <script type="text/javascript" src="scripts/directives/widgets/waterfallslider/waterfallslider.js"></script>
 
     <script type="text/javascript" src="scripts/directives/utils/shownotify/shownotify.js"></script>
+    <script type="text/javascript" src="scripts/directives/utils/sorthelper/sorthelper.js"></script>
 
     <script type="text/javascript" src="scripts/directives/charts/treemap/treemap.js"></script>
     <script type="text/javascript" src="scripts/directives/charts/linechart/linechart.js"></script>
