--- a/source/java/admin-webapp/src/scripts/activity/activity.html
+++ b/source/java/admin-webapp/src/scripts/activity/activity.html
@@ -5,7 +5,7 @@
     
     <div class="top-label">
         <span class="header pull-left" style="margin-right: 24px;" translate>activities.header</span>
-        <fui-input style="width: 350px;" class="form-control pull-left" placeholder="{{ 'common.l_search' | translate }}" ng-model="searchQuery" icon-class="fui-search">
+        <fui-input style="width: 350px;" class="form-control pull-left" placeholder="{{ 'common.l_search' | translate }}" ng-model="searchQuery" icon-class="icon-search tall-icon-fix">
     </div>
 
     <div class="page-vertical-spacer"></div>
