--- a/source/java/admin-webapp/src/scripts/users/users.html
+++ b/source/java/admin-webapp/src/scripts/users/users.html
@@ -4,7 +4,7 @@
 
         <div>
             <span class="header pull-left" style="margin-right: 24px;" translate>users.title</span>
-            <fui-input style="width: 350px;" class="form-control pull-left" placeholder="{{ 'common.l_search' | translate }}" icon-class="fui-search" ng-model="userQuery"></fui-input>
+            <fui-input style="width: 350px;" class="form-control pull-left" placeholder="{{ 'common.l_search' | translate }}" icon-class="icon-search tall-icon-fix" ng-model="userQuery"></fui-input>
             <a ng-click="createNewUser()" class="add-user-link pull-right btn btn-primary" translate>users.l_create_user</a>
         </div>
 
