adding a sorting and searching test

--- a/source/java/admin-webapp/src/scripts/directives/utils/sorthelper/sorthelper.html
+++ b/source/java/admin-webapp/src/scripts/directives/utils/sorthelper/sorthelper.html
@@ -1,2 +1,2 @@
-<div class="no-select" ng-click="headerClicked()" style="cursor: pointer;" ng-transclude>
+<div class="no-select sort-helper" ng-click="headerClicked()" style="cursor: pointer;" ng-transclude>
 </div>
